--- a/emacs/example.httpd.conf
+++ b/emacs/example.httpd.conf
@@ -5,17 +5,16 @@ Listen 80
 NameVirtualHost *:80
 
 <VirtualHost *:80>
-DocumentRoot /www/example1
-ServerName www.example.com
+DocumentRoot /www/unix
+ServerName www.unix.com
+</VirtualHost>
 
 # Other directives here
-
-</VirtualHost>
 
 <VirtualHost *:80>
-DocumentRoot /www/example2
-ServerName www.example.org
+DocumentRoot /www/linux
+ServerName www.unix.org
+</VirtualHost>
 
 # Other directives here
 
-</VirtualHost>
